# Lumina-Backend

./: .env.example  .env.production  README.md  package-lock.json  package.json  validate-circuit-breaker.js  vestingScheduleManager.test.js
.github/workflows/: e2e-pipeline.yml  smart-contract-tests.yml  test.yml  vulnerability-scan.yml
backend/: IDEMPOTENCY_KEY_IMPLEMENTATION.md  jest.setup.js  package-lock.json  package.json  test-deduplication.js  validate-deduplication.js
backend/src/: index.js
docs/: DISASTER_RECOVERY.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
routes/: vesting.js
src/load-balancer/: adaptive-drain.ts  backend-pool.rs  health-prober.rs  route-table.ts  weight-calculator.ts
src/membership/: gossip-protocol.ts  join-handler.ts  member-list.ts  peer-selector.rs  random-subset.ts  state-sync.rs
src/metering/: Cargo.toml  bandwidth-calculator.ts  counter-sync-daemon.ts  flow-normalizer.ts  flow-tracker.ts  nic-aggregator.ts  nic-capture.rs  package.json
src/metering/src/: counter.rs  lib.rs  shard.rs  store.rs  watchdog.rs
src/monitoring/: health-score-aggregator.ts  port-exhaustion-watchdog.rs
src/network/: control-plane-budget.rs  port-allocator.ts  socket-options.rs
src/proxy/: connection-multiplexer.rs  packet-interceptor.ts  stream-scheduler.rs  upstream-connector.ts
src/services/: assetDecimalNormalizer.js  databaseCircuitBreakerMonitor.js  (+1 more)
tests/: databaseCircuitBreaker.test.js  gossip_test.ts
(+26 files in other folders)
