[package]
name = "metering-native"
version = "0.1.0"
edition = "2021"
description = "High-performance mmap'd per-flow byte counters with hugepage support"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
